--- a/Tulanmap/application/views/main/admin.html
+++ b/Tulanmap/application/views/main/admin.html
@@ -10,11 +10,14 @@ $var privilege: $params['privilege']
             </center>
     </div>
     <center>
-        <img src="/static/files/servicios1.1.png"  width="180" height="290" >
+        <img src="/static/files/servicios1.1.png"  width="1" height="280" >
         <img src="/static/files/admin.jpg"  width="150" height="125" align="left">
         <img src="/static/files/c2-tulancingo.jpeg"  width="150" height="125" align="right">
         </center>
         <br>
+        <head>
+            <script data-ad-client="ca-pub-5589388896993256" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        </head>
         <img src="/static/files/app-Mobile-testing.png"  width="120" height="120" align="left">
         <img src="/static/files/imagen turas.jpg"  width="120" height="120" align="right">
         
